@@ -198,12 +198,14 @@ class Raw(Directive):
                                                  self.options['file']))
             path = utils.relative_path(None, path)
             try:
-                self.state.document.settings.record_dependencies.add(path)
                 raw_file = io.FileInput(
                     source_path=path, encoding=encoding,
                     error_handler=(self.state.document.settings.\
                                    input_encoding_error_handler),
                     handle_io_errors=None)
+                # TODO: currently, raw input files are recorded as
+                # dependencies even if not used for the chosen output format.
+                self.state.document.settings.record_dependencies.add(path)
             except IOError, error:
                 raise self.severe(u'Problems with "%s" directive path:\n%s.'
                                   % (self.name, ErrorString(error)))
